--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 
 <!--Styling for visualisation-->	
 	<style type="text/css">
-		
+		body{
+            overflow-x: hidden;
+        }
 		@font-face {
 			font-family: Futura LT;
 			src: url(fonts/FuturaStd-Light.otf);
